<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ottot.mineseeker.UserMenu">

    <TextView
        android:text="@string/Menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/main_menu"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/BestScoreTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BestScroreTittle"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        android:layout_below="@+id/help_btn"
        android:layout_alignLeft="@+id/help_btn"
        android:layout_alignStart="@+id/help_btn"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp" />

    <TextView
        android:id="@+id/BestScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BestScoreTittle"
        android:layout_alignStart="@+id/BestScoreTittle"
        android:layout_below="@+id/BestScoreTittle"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/initNum"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TimePlayedTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BestScore"
        android:layout_alignStart="@+id/BestScore"
        android:layout_below="@+id/BestScore"
        android:text="@string/TimePlayedTittle"
        android:textStyle="bold"
        android:textColor="@android:color/background_dark"
        />

    <TextView
        android:id="@+id/TimePlayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TimePlayedTittle"
        android:layout_alignStart="@+id/TimePlayedTittle"
        android:layout_below="@+id/TimePlayedTittle"
        android:text="@string/initNum"
        android:textSize="16sp"/>

    <Button
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Game_start"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_below="@+id/main_menu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/introimg"
        android:id="@+id/main_menu_img"
        android:contentDescription="@string/menu_img_description"
        android:layout_above="@+id/help_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/zombie2"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:id="@+id/imageView"
        android:contentDescription="@string/zombieDes"
        android:layout_below="@+id/options_btn"
        android:layout_alignLeft="@+id/main_menu"
        android:layout_alignStart="@+id/main_menu" />

    <Button
        android:text="@string/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/help_btn"

        android:layout_marginTop="24dp"
        android:layout_below="@+id/options_btn"
        android:layout_alignLeft="@+id/options_btn"
        android:layout_alignStart="@+id/options_btn" />

    <Button
        android:text="@string/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/options_btn"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/Game_start"
        android:layout_alignLeft="@+id/Game_start"
        android:layout_alignStart="@+id/Game_start" />

</RelativeLayout>
