<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ottot.mineseeker.help_page">

    <TextView
        android:text="@string/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:textSize="21dp"
        android:textStyle="bold"
        android:id="@+id/help_title" />

    <TextView
        android:text="@string/website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/course_website"
        android:layout_alignTop="@+id/return_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp" />

    <Button
        android:text="@string/Return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/return_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/help_text"
        android:layout_alignStart="@+id/help_text" />

    <TextView
        android:text="@string/Authors"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/authorInHelpPage"
        android:layout_above="@+id/course_website"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/helpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        android:background="@drawable/helppage"
        android:textColor="@android:color/white"
        android:id="@+id/help_text"
        tools:textColor="@android:color/white"
        android:layout_above="@+id/authorInHelpPage"
        android:layout_alignLeft="@+id/help_title"
        android:layout_alignStart="@+id/help_title" />
</RelativeLayout>
