<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ottot.mineseeker.options_page">

    <TextView
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:id="@+id/options_title"
        android:textStyle = "bold"
        android:textSize="24sp" />

    <TextView
        android:text="@string/board_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/options_title"
        android:layout_alignLeft="@+id/options_title"
        android:layout_alignStart="@+id/options_title"
        android:layout_marginTop="28dp"
        android:textSize="21dp"
        android:id="@+id/board_size" />

    <TextView
        android:text="@string/num_mines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/board_size"
        android:layout_alignLeft="@+id/board_size"
        android:layout_alignStart="@+id/board_size"
        android:layout_marginTop="29dp"
        android:textSize="21dp"
        android:id="@+id/textView3" />

    <Button
        android:text="@string/time_erase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="39dp"
        android:id="@+id/ResetTimePlay" />

    <Button
        android:text="@string/Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="69dp"
        android:layout_marginEnd="69dp"
        android:id="@+id/opt_ret_btn"
        android:layout_alignBaseline="@+id/ResetTimePlay"
        android:layout_alignBottom="@+id/ResetTimePlay"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:id="@+id/dimDD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@android:drawable/alert_light_frame"
        android:layout_alignTop="@+id/board_size"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/board_size" />

    <Spinner
        android:id="@+id/numMineDD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@android:drawable/arrow_down_float"
        android:layout_above="@+id/ResetTimePlay"
        android:layout_alignLeft="@+id/dimDD"
        android:layout_alignStart="@+id/dimDD"
        android:layout_alignTop="@+id/textView3" />

    <Button
        android:id="@+id/clearBestScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/ResetTimePlay"
        android:layout_alignLeft="@+id/ResetTimePlay"
        android:layout_alignRight="@+id/ResetTimePlay"
        android:layout_alignStart="@+id/ResetTimePlay"
        android:layout_below="@+id/ResetTimePlay"
        android:text="ERASE BEST SCORE" />

</RelativeLayout>
